--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,26 @@ jobs:
         run: bun run test
 
 
+  require-chromatic-checkbox:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - uses: actions/github-script@v7
+        with:
+          script: |
+            const body = context.payload.pull_request.body || '';
+            if (!body.includes('Run Chromatic for visual regression tests')) {
+              core.setFailed('PR is missing the Chromatic checkbox');
+            }
+
+
   build-storybook:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    needs: unit-tests
+    needs:
+      - unit-tests
+      - require-chromatic-checkbox
 
     steps:
       - uses: actions/checkout@v4
@@ -67,6 +83,10 @@ jobs:
           path: storybook-static
           if-no-files-found: error
 
+
+  # ---------------------------
+  # 4) Deploy Storybook
+  # ---------------------------
   storybook-deploy:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
