--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,29 +1,35 @@
 name: Chromatic
 
 on:
-  pull_request:
+  issue_comment:
     types: [edited]
 
 jobs:
   chromatic:
     if: |
-      contains(github.event.pull_request.body, '- [x] Run Chromatic for visual regression tests') ||
-      contains(github.event.pull_request.body, '- [X] Run Chromatic for visual regression tests')
+      github.event.issue.pull_request &&
+      contains(github.event.comment.body, '- [x] Run Chromatic for visual regression tests') ||
+      contains(github.event.comment.body, '- [X] Run Chromatic for visual regression tests')
 
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout PR
+        uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: refs/pull/${{ github.event.issue.number }}/head
+          fetch-depth: 0
 
       - uses: oven-sh/setup-bun@v1
 
       - run: bun install --ignore-scripts
+
       - run: bun run build-storybook
 
-      - run: |
+      - name: Run Chromatic
+        run: |
           npx chromatic \
             --project-token=c9bbc986d0d6 \
             --storybook-build-dir=storybook-static \
             --ci
+        continue-on-error: true
