--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,39 +33,10 @@ jobs:
         run: bun run test
 
 
-  require-chromatic-checkbox:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const pr = context.payload.pull_request.number;
-
-            const comments = await github.rest.issues.listComments({
-              owner,
-              repo,
-              issue_number: pr,
-              per_page: 100,
-            });
-
-            const regex = /- \[(x|X)\]\s*Run Chromatic for visual regression tests/i;
-
-            const found = comments.data.some(c => regex.test(c.body));
-
-            if (!found) {
-              core.setFailed('Chromatic checkbox is not checked in PR comments');
-            }
-
-
   build-storybook:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    needs:
-      - unit-tests
-      - require-chromatic-checkbox
+    needs: unit-tests
 
     steps:
       - uses: actions/checkout@v4
@@ -86,7 +57,7 @@ jobs:
       - name: Install dependencies
         run: bun install --ignore-scripts
 
-      - name: Build Storybook
+      - name: Build Storybook (once)
         run: bun run build-storybook
 
       - name: Upload Storybook artifact
@@ -95,6 +66,62 @@ jobs:
           name: storybook-static
           path: storybook-static
           if-no-files-found: error
+
+  check-task-list:
+    name: Check PR checklist
+    runs-on: ubuntu-latest
+    needs: build-storybook
+    outputs:
+      ok: ${{ steps.result.outputs.ok }}
+    steps:
+      - name: Read Task List Checker status
+        id: result
+        run: |
+          STATUS=$(gh api \
+            repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/status \
+            --jq '.statuses[] | select(.context=="Task List Checker") | .state' \
+            | head -n 1)
+
+          echo "Checklist status: $STATUS"
+
+          if [ "$STATUS" = "success" ]; then
+            echo "ok=true" >> $GITHUB_OUTPUT
+          else
+            echo "ok=false" >> $GITHUB_OUTPUT
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+  chromatic:
+    name: Chromatic
+    runs-on: ubuntu-latest
+    needs: [build-storybook, check-task-list]
+    if: needs.check-task-list.outputs.ok == 'true'
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: oven-sh/setup-bun@v1
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.bun/install/cache
+            node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
+      - run: bun install --ignore-scripts
+      - uses: actions/download-artifact@v4
+        with:
+          name: storybook-static
+          path: storybook-static
+      - run: |
+          npx chromatic \
+            --project-token=c9bbc986d0d6 \
+            --storybook-build-dir=storybook-static \
+            --exit-zero-on-changes \
+            --ci
 
 
   storybook-deploy:
@@ -115,6 +142,8 @@ jobs:
             ~/.bun/install/cache
             node_modules
           key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
 
       - name: Install dependencies
         run: bun install --ignore-scripts
