--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches-ignore:
       - master
   pull_request:
+    types: [opened, synchronize, reopened, edited]
 
 jobs:
   unit-tests:
@@ -74,21 +75,31 @@ jobs:
     outputs:
       ok: ${{ steps.result.outputs.ok }}
     steps:
-      - name: Read Task List Checker status
+      - name: Wait for Task List Checker status
         id: result
         run: |
-          STATUS=$(gh api \
-            repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/status \
-            --jq '.statuses[] | select(.context=="Task List Checker") | .state' \
-            | head -n 1)
+          for i in {1..12}; do
+            STATUS=$(gh api \
+              repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/status \
+              --jq '.statuses[] | select(.context=="Task List Checker") | .state' \
+              | head -n 1)
 
-          echo "Checklist status: $STATUS"
+            echo "Attempt $i → status=$STATUS"
 
-          if [ "$STATUS" = "success" ]; then
-            echo "ok=true" >> $GITHUB_OUTPUT
-          else
-            echo "ok=false" >> $GITHUB_OUTPUT
-          fi
+            if [ "$STATUS" = "success" ]; then
+              echo "ok=true" >> $GITHUB_OUTPUT
+              exit 0
+            fi
+
+            if [ "$STATUS" = "failure" ]; then
+              echo "ok=false" >> $GITHUB_OUTPUT
+              exit 0
+            fi
+
+            sleep 5
+          done
+
+          echo "ok=false" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -122,7 +133,6 @@ jobs:
             --storybook-build-dir=storybook-static \
             --exit-zero-on-changes \
             --ci
-
 
   storybook-deploy:
     if: github.event_name == 'pull_request'
