--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -12,10 +12,8 @@ permissions:
 jobs:
   chromatic:
     if: >
-      github.event.check_run.name == 'GitHub Task List Checker' &&
-      github.event.check_run.conclusion == 'success' &&
-      github.event.check_run.pull_requests != null &&
-      github.event.check_run.pull_requests[0] != null
+      contains(github.event.check_run.name, 'checklist') &&
+      github.event.check_run.conclusion == 'success'
 
     runs-on: ubuntu-latest
 
