--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,8 +1,7 @@
 name: Run Chromatic when checklist is complete
 
 on:
-  check_run:
-    types: [completed]
+  status
 
 permissions:
   contents: read
@@ -12,36 +11,18 @@ permissions:
 jobs:
   chromatic:
     if: >
-      contains(github.event.check_run.name, 'checklist') &&
-      github.event.check_run.conclusion == 'success'
+      github.event.state == 'success' &&
+      contains(github.event.context, 'checklist')
 
     runs-on: ubuntu-latest
 
     steps:
-      - name: Extract PR info
+      - name: Get PR
         id: pr
         run: |
-          PR=$(gh api repos/${{ github.repository }}/commits/${{ github.event.check_run.head_sha }}/pulls --jq '.[0]')
-          
-          NUMBER=$(echo "$PR" | jq -r '.number')
-          SHA="${{ github.event.check_run.head_sha }}"
-          
-          echo "number=$NUMBER" >> $GITHUB_OUTPUT
-          echo "sha=$SHA" >> $GITHUB_OUTPUT
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Prevent duplicate Chromatic for same commit
-        run: |
-          RUNS=$(gh run list \
-            --workflow chromatic.yml \
-            --json headSha,status \
-            --jq ".[] | select(.headSha == \"${{ steps.pr.outputs.sha }}\") | select(.status != \"completed\")")
-
-          if [ -n "$RUNS" ]; then
-            echo "Chromatic already running for this commit – skipping"
-            exit 0
-          fi
+          PR=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0]')
+          echo "number=$(echo $PR | jq -r '.number')" >> $GITHUB_OUTPUT
+          echo "sha=${{ github.sha }}" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -58,13 +39,9 @@ jobs:
             ~/.bun/install/cache
             node_modules
           key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
 
       - run: bun install --ignore-scripts
-
       - run: bun run build-storybook
-
       - run: |
           npx chromatic \
             --project-token=c9bbc986d0d6 \
