--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,11 +1,14 @@
 name: Run Chromatic
 
 on:
-  workflow_dispatch:  # Permet le déclenchement manuel
+  workflow_dispatch:
+    inputs:
+      pr:
+        description: "Pull request number"
+        required: true
 
 permissions:
   contents: read
-  actions: read
   pull-requests: read
 
 jobs:
@@ -13,12 +16,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get PR info
+      - name: Get PR SHA
         id: pr
         run: |
-          PR=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0]')
-          echo "number=$(echo $PR | jq -r '.number')" >> $GITHUB_OUTPUT
-          echo "sha=${{ github.sha }}" >> $GITHUB_OUTPUT
+          PR=${{ github.event.inputs.pr }}
+          DATA=$(gh api repos/${{ github.repository }}/pulls/$PR)
+          echo "sha=$(echo $DATA | jq -r '.head.sha')" >> $GITHUB_OUTPUT
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -38,8 +41,8 @@ jobs:
 
       - run: bun install --ignore-scripts
       - run: bun run build-storybook
+
       - run: |
           npx chromatic \
             --project-token=c9bbc986d0d6 \
-            --exit-zero-on-changes \
             --ci
