--- a/.github/workflows/chromatic-link.yml
+++ b/.github/workflows/chromatic-link.yml
@@ -10,56 +10,56 @@ permissions:
 jobs:
   add-chromatic-link:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Comment with direct link
+      - name: Comment with Chromatic button
         uses: actions/github-script@v7
         with:
           script: |
-            const workflowUrl = `https://github.com/${{ github.repository }}/actions/workflows/chromatic.yml`;
-            const branch = context.payload.pull_request.head.ref;
-            
-            // Try to find existing comment
-            const comments = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number
-            });
-            
-            const botComment = comments.data.find(comment => 
-              comment.user.type === 'Bot' && 
-              comment.body.includes('Run Chromatic Visual Tests')
-            );
-            
+            const prNumber = context.issue.number;
+            const repo = context.repo.repo;
+            const owner = context.repo.owner;
+
+            const workflowUrl =
+              `https://github.com/${owner}/${repo}/actions/workflows/chromatic.yml?pr=${prNumber}`;
+
             const body = `### 🎨 Run Chromatic Visual Tests
-            
-            <a href="${workflowUrl}">
-              <img src="https://img.shields.io/badge/▶️_Launch_Chromatic-4A90E2?style=for-the-badge&logo=github" alt="Run Chromatic"/>
-            </a>
-            
-            **Quick steps:**
-            1. [Click here to open workflow](${workflowUrl})
-            2. Click the green **"Run workflow"** button
-            3. Select branch: \`${branch}\`
-            4. Click **"Run workflow"** again
-            
-            ---
-            
-            💡 **Tip:** Comment \`/chromatic\` to run automatically!`;
-            
-            if (botComment) {
-              // Update existing comment
-              await github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: body
-              });
-            } else {
-              // Create new comment
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: body
-              });
-            }
+
+  <a href="${workflowUrl}">
+  <img src="https://img.shields.io/badge/▶️_Launch_Chromatic-4A90E2?style=for-the-badge&logo=github" alt="Run Chromatic"/>
+  </a>
+
+  **What this does:**
+- Builds Storybook
+- Runs Chromatic visual tests
+- Posts the review link
+- Consumes **1 credit**
+  
+  Click the button above, then click **Run workflow**.`;
+
+const { data: comments } = await github.rest.issues.listComments({
+  owner,
+  repo,
+  issue_number: prNumber
+});
+  
+  const botComment = comments.find(c =>
+  c.user.type === "Bot" &&
+  c.body.includes("Launch_Chromatic")
+  );
+  
+  if (botComment) {
+  await github.rest.issues.updateComment({
+  owner,
+  repo,
+comment_id: botComment.id,
+  body
+});
+} else {
+  await github.rest.issues.createComment({
+  owner,
+  repo,
+issue_number: prNumber,
+  body
+});
+}
