--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       pr:
-        description: "Pull request number"
+        description: "Pull Request number"
         required: true
 
 permissions:
@@ -31,7 +31,6 @@ jobs:
           fetch-depth: 0
 
       - uses: oven-sh/setup-bun@v1
-
       - uses: actions/cache@v4
         with:
           path: |
