--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   chromatic:
     if: >
-      github.event.issue.pull_request &&
+      github.event.issue.pull_request != null &&
       contains(github.event.comment.body, '/chromatic')
 
     runs-on: ubuntu-latest
