--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -6,15 +6,33 @@ on:
 
 jobs:
   chromatic:
-    if: >
-      github.event.issue.pull_request != null &&
-      contains(github.event.comment.body, '/chromatic')
+    if: contains(github.event.comment.body, '/chromatic')
 
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      pull-requests: read
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Get PR info
+        id: pr
+        uses: actions/github-script@v7
         with:
+          script: |
+            const pr = await github.rest.pulls.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number,
+            });
+            core.setOutput("ref", pr.data.head.ref);
+            core.setOutput("repo", pr.data.head.repo.full_name);
+
+      - name: Checkout PR
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ steps.pr.outputs.repo }}
+          ref: ${{ steps.pr.outputs.ref }}
           fetch-depth: 0
 
       - uses: oven-sh/setup-bun@v1
@@ -25,8 +43,6 @@ jobs:
             ~/.bun/install/cache
             node_modules
           key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-bun-
 
       - name: Install dependencies
         run: bun install --ignore-scripts
