--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,4 +1,4 @@
-name: Chromatic
+name: Chromatic DEBUG
 
 on:
   issue_comment:
@@ -6,54 +6,13 @@ on:
 
 jobs:
   chromatic:
-    if: contains(github.event.comment.body, '/chromatic')
-
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      pull-requests: read
-
     steps:
-      - name: Get PR info
-        id: pr
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const pr = await github.rest.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.issue.number,
-            });
-            core.setOutput("ref", pr.data.head.ref);
-            core.setOutput("repo", pr.data.head.repo.full_name);
-
-      - name: Checkout PR
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ steps.pr.outputs.repo }}
-          ref: ${{ steps.pr.outputs.ref }}
-          fetch-depth: 0
-
-      - uses: oven-sh/setup-bun@v1
-
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.bun/install/cache
-            node_modules
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
-
-      - name: Install dependencies
-        run: bun install --ignore-scripts
-
-      - name: Build Storybook
-        run: bun run build-storybook
-
-      - name: Run Chromatic
+      - name: Dump event
         run: |
-          npx chromatic \
-            --project-token=c9bbc986d0d6 \
-            --storybook-build-dir=storybook-static \
-            --exit-zero-on-changes \
-            --ci
+          echo "COMMENT BODY:"
+          echo "${{ github.event.comment.body }}"
+          echo ""
+          echo "EVENT:"
+          echo '${{ toJson(github.event) }}'
