chore: update Chromatic workflow to trigger on pull request events

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -4,39 +4,16 @@ on:
   pull_request:
   issue_comment:
     types: [created]
-  workflow_dispatch:  # Permet de lancer manuellement
-    inputs:
-      pr_number:
-        description: 'PR number to test'
-        required: true
-        type: number
 
 jobs:
   chromatic-test:
-    if: |
-      (github.event_name == 'issue_comment' && 
-       github.event.issue.pull_request && 
-       contains(github.event.comment.body, '/chromatic')) ||
-      github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get PR info
-        id: pr
-        run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "number=${{ inputs.pr_number }}" >> $GITHUB_OUTPUT
-          else
-            echo "number=${{ github.event.issue.number }}" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Checkout PR code
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          ref: refs/pull/${{ steps.pr.outputs.number }}/head
 
       - name: Hello World
         run: |
           echo "Hello World! Chromatic workflow triggered."
-          echo "PR number: ${{ steps.pr.outputs.number }}"
           echo "Event: ${{ github.event_name }}"
