--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,25 @@ on:
   pull_request:
 
 jobs:
+  chromatic-instructions:
+    if: github.event_name == 'pull_request' && github.event.action == 'opened'
+    runs-on: ubuntu-latest
+
+    permissions:
+      pull-requests: write
+
+    steps:
+      - name: Add Chromatic instructions
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: '💡 **Chromatic Visual Tests**\n\nTo run Chromatic visual regression tests, comment:\n```\n/chromatic\n```'
+            })
+
   unit-tests:
     runs-on: ubuntu-latest
 
