chore: enhance Chromatic workflow to trigger on pull request reviews and update comment instructions

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,12 +1,26 @@
 name: Chromatic
 
 on:
+  pull_request_review:
+    types: [submitted]
+
   issue_comment:
     types: [created]
 
 jobs:
   chromatic:
-    if: contains(github.event.comment.body, '/chromatic')
+    if: |
+      (
+        github.event_name == 'pull_request_review' &&
+        github.event.review.state == 'approved'
+      ) ||
+      (
+        github.event_name == 'issue_comment' &&
+        (
+          contains(github.event.comment.body, '@chromatic') ||
+          contains(github.event.comment.body, '/chromatic')
+        )
+      )
 
     runs-on: ubuntu-latest
 
@@ -15,24 +29,9 @@ jobs:
       pull-requests: read
 
     steps:
-      - name: Get PR info
-        id: pr
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const pr = await github.rest.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.issue.number,
-            });
-            core.setOutput("ref", pr.data.head.ref);
-            core.setOutput("repo", pr.data.head.repo.full_name);
-
       - name: Checkout PR
         uses: actions/checkout@v4
         with:
-          repository: ${{ steps.pr.outputs.repo }}
-          ref: ${{ steps.pr.outputs.ref }}
           fetch-depth: 0
 
       - uses: oven-sh/setup-bun@v1
