--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,19 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            github.rest.issues.createComment({
+            await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: '💡 **Chromatic Visual Tests**\n\nTo run Chromatic visual regression tests, comment:\n```\n/chromatic\n```'
+              body:
+                "💡 **Chromatic Visual Tests**\n\n" +
+                "To run Chromatic visual regression tests on this PR, comment:\n\n" +
+                "```\n" +
+                "@chromatic\n" +
+                "```\n\n" +
+                "Or simply approve the PR to run them automatically."
             })
+
 
   unit-tests:
     runs-on: ubuntu-latest
