--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -17,6 +17,7 @@ jobs:
       ) ||
       (
         github.event_name == 'issue_comment' &&
+        github.event.issue.pull_request &&
         (
           contains(github.event.comment.body, '@chromatic') ||
           contains(github.event.comment.body, '/chromatic')
@@ -30,10 +31,25 @@ jobs:
       pull-requests: read
 
     steps:
+      - name: Get PR HEAD ref
+        if: github.event_name == 'issue_comment'
+        id: pr
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: pr } = await github.rest.pulls.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number
+            });
+            core.setOutput('ref', pr.head.ref);
+            core.setOutput('sha', pr.head.sha);
+
       - name: Checkout PR
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event_name == 'issue_comment' && steps.pr.outputs.ref || github.event.pull_request.head.ref }}
 
       - uses: oven-sh/setup-bun@v1
 
