--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -28,28 +28,38 @@ jobs:
 
     permissions:
       contents: read
-      pull-requests: read
+      pull-requests: write
+      statuses: write
 
     steps:
-      - name: Get PR HEAD ref
-        if: github.event_name == 'issue_comment'
+      - name: Get PR info
         id: pr
         uses: actions/github-script@v7
         with:
           script: |
+            let prNumber, prData;
+
+            if (context.eventName === 'issue_comment') {
+              prNumber = context.issue.number;
+            } else {
+              prNumber = context.payload.pull_request.number;
+            }
+
             const { data: pr } = await github.rest.pulls.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              pull_number: context.issue.number
+              pull_number: prNumber
             });
+
             core.setOutput('ref', pr.head.ref);
             core.setOutput('sha', pr.head.sha);
+            core.setOutput('number', prNumber);
 
       - name: Checkout PR
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event_name == 'issue_comment' && steps.pr.outputs.ref || github.event.pull_request.head.ref }}
+          ref: ${{ steps.pr.outputs.ref }}
 
       - uses: oven-sh/setup-bun@v1
 
@@ -67,9 +77,11 @@ jobs:
         run: bun run build-storybook
 
       - name: Run Chromatic
-        run: |
-          npx chromatic \
-            --project-token=c9bbc986d0d6 \
-            --storybook-build-dir=storybook-static \
-            --exit-zero-on-changes \
-            --ci
+        uses: chromaui/action@latest
+        with:
+          projectToken: c9bbc986d0d6
+          storybookBuildDir: storybook-static
+          exitOnceUploaded: true
+        env:
+          CHROMATIC_SHA: ${{ steps.pr.outputs.sha }}
+          CHROMATIC_BRANCH: ${{ steps.pr.outputs.ref }}
