--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,27 +1,16 @@
 name: Chromatic
 
 on:
-  pull_request_review:
-    types: [submitted]
-
   issue_comment:
     types: [created]
-
 
 jobs:
   chromatic:
     if: |
+      github.event.issue.pull_request &&
       (
-        github.event_name == 'pull_request_review' &&
-        github.event.review.state == 'approved'
-      ) ||
-      (
-        github.event_name == 'issue_comment' &&
-        github.event.issue.pull_request &&
-        (
-          contains(github.event.comment.body, '@chromatic') ||
-          contains(github.event.comment.body, '/chromatic')
-        )
+        contains(github.event.comment.body, '@chromatic') ||
+        contains(github.event.comment.body, '/chromatic')
       )
 
     runs-on: ubuntu-latest
@@ -37,23 +26,13 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            let prNumber, prData;
-
-            if (context.eventName === 'issue_comment') {
-              prNumber = context.issue.number;
-            } else {
-              prNumber = context.payload.pull_request.number;
-            }
-
             const { data: pr } = await github.rest.pulls.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              pull_number: prNumber
+              pull_number: context.issue.number
             });
-
             core.setOutput('ref', pr.head.ref);
             core.setOutput('sha', pr.head.sha);
-            core.setOutput('number', prNumber);
 
       - name: Checkout PR
         uses: actions/checkout@v4
@@ -76,12 +55,58 @@ jobs:
       - name: Build Storybook
         run: bun run build-storybook
 
+      - name: Create pending status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: '${{ steps.pr.outputs.sha }}',
+              state: 'pending',
+              description: 'Running visual tests...',
+              context: 'UI Tests'
+            });
+
       - name: Run Chromatic
+        id: chromatic
         uses: chromaui/action@latest
         with:
           projectToken: c9bbc986d0d6
           storybookBuildDir: storybook-static
-          exitOnceUploaded: true
+          exitZeroOnChanges: true
         env:
           CHROMATIC_SHA: ${{ steps.pr.outputs.sha }}
           CHROMATIC_BRANCH: ${{ steps.pr.outputs.ref }}
+
+      - name: Update commit status
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const changeCount = parseInt('${{ steps.chromatic.outputs.changeCount }}') || 0;
+            const errorCount = parseInt('${{ steps.chromatic.outputs.errorCount }}') || 0;
+            const url = '${{ steps.chromatic.outputs.url }}';
+
+            let state, description;
+
+            if (errorCount > 0) {
+              state = 'failure';
+              description = `Build failed with ${errorCount} error(s)`;
+            } else if (changeCount > 0) {
+              state = 'pending';
+              description = `${changeCount} visual change(s) need review`;
+            } else {
+              state = 'success';
+              description = 'No visual changes detected';
+            }
+
+            await github.rest.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: '${{ steps.pr.outputs.sha }}',
+              state,
+              target_url: url,
+              description,
+              context: 'UI Tests'
+            });
