--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,24 +1,18 @@
 name: Chromatic
 
 on:
-  issue_comment:
-    types: [created]
+  pull_request:
+    types: [labeled, synchronize]
 
 jobs:
   # =============================================================================
   # Job 1: Chromatic Build
-  # Triggered by @chromatic or /chromatic comment
+  # Triggered when "chromatic" label is added
   # Shows as "Chromatic Build" in PR checklist
   # =============================================================================
   chromatic-build:
     name: Chromatic Build
-    if: |
-      github.event.issue.pull_request &&
-      (
-        contains(github.event.comment.body, '@chromatic') ||
-        contains(github.event.comment.body, '/chromatic')
-      ) &&
-      !contains(github.event.comment.body, '@chromatic-approve')
+    if: contains(github.event.pull_request.labels.*.name, 'chromatic')
 
     runs-on: ubuntu-latest
 
@@ -28,45 +22,16 @@ jobs:
       statuses: write
 
     outputs:
-      sha: ${{ steps.pr.outputs.sha }}
-      ref: ${{ steps.pr.outputs.ref }}
       change-count: ${{ steps.chromatic.outputs.changeCount }}
       error-count: ${{ steps.chromatic.outputs.errorCount }}
       chromatic-url: ${{ steps.chromatic.outputs.url }}
       build-url: ${{ steps.chromatic.outputs.buildUrl }}
 
     steps:
-      - name: Get PR info
-        id: pr
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { data: pr } = await github.rest.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.issue.number
-            });
-            core.setOutput('ref', pr.head.ref);
-            core.setOutput('sha', pr.head.sha);
-
-      - name: Set pending status for build
-        uses: actions/github-script@v7
-        with:
-          script: |
-            await github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: '${{ steps.pr.outputs.sha }}',
-              state: 'pending',
-              description: 'Building Storybook...',
-              context: 'Chromatic Build'
-            });
-
-      - name: Checkout PR
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ steps.pr.outputs.ref }}
 
       - uses: oven-sh/setup-bun@v1
 
@@ -91,48 +56,19 @@ jobs:
           storybookBuildDir: storybook-static
           exitZeroOnChanges: true
           exitOnceUploaded: true
-        env:
-          CHROMATIC_SHA: ${{ steps.pr.outputs.sha }}
-          CHROMATIC_BRANCH: ${{ steps.pr.outputs.ref }}
-
-      - name: Update build status
-        if: always()
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const errorCount = parseInt('${{ steps.chromatic.outputs.errorCount }}') || 0;
-            const url = '${{ steps.chromatic.outputs.buildUrl }}' || '${{ steps.chromatic.outputs.url }}';
-
-            if (errorCount > 0) {
-              await github.rest.repos.createCommitStatus({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                sha: '${{ steps.pr.outputs.sha }}',
-                state: 'failure',
-                target_url: url,
-                description: `Build failed with ${errorCount} error(s)`,
-                context: 'Chromatic Build'
-              });
-            } else {
-              await github.rest.repos.createCommitStatus({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                sha: '${{ steps.pr.outputs.sha }}',
-                state: 'success',
-                target_url: url,
-                description: 'Build completed successfully',
-                context: 'Chromatic Build'
-              });
-            }
 
   # =============================================================================
   # Job 2: Visual Review
-  # Runs after chromatic-build, creates a pending status until approved
+  # Runs after chromatic-build
   # Shows as "Visual Review" in PR checklist
+  # - Success if no visual changes
+  # - Pending if changes need approval on Chromatic
   # =============================================================================
   visual-review:
     name: Visual Review
     needs: chromatic-build
+    if: contains(github.event.pull_request.labels.*.name, 'chromatic')
+
     runs-on: ubuntu-latest
 
     permissions:
@@ -140,107 +76,37 @@ jobs:
       pull-requests: write
 
     steps:
-      - name: Set visual review status
+      - name: Check visual changes
+        id: check
+        run: |
+          echo "change_count=${{ needs.chromatic-build.outputs.change-count }}" >> $GITHUB_OUTPUT
+          echo "error_count=${{ needs.chromatic-build.outputs.error-count }}" >> $GITHUB_OUTPUT
+
+      - name: No changes - Auto approve
+        if: needs.chromatic-build.outputs.change-count == '0' && needs.chromatic-build.outputs.error-count == '0'
+        run: echo "No visual changes detected - auto approved"
+
+      - name: Changes detected - Require approval
+        if: needs.chromatic-build.outputs.change-count != '0' && needs.chromatic-build.outputs.error-count == '0'
         uses: actions/github-script@v7
         with:
           script: |
-            const changeCount = parseInt('${{ needs.chromatic-build.outputs.change-count }}') || 0;
-            const errorCount = parseInt('${{ needs.chromatic-build.outputs.error-count }}') || 0;
             const url = '${{ needs.chromatic-build.outputs.chromatic-url }}';
+            const changeCount = '${{ needs.chromatic-build.outputs.change-count }}';
 
-            // If build failed, skip visual review
-            if (errorCount > 0) {
-              await github.rest.repos.createCommitStatus({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                sha: '${{ needs.chromatic-build.outputs.sha }}',
-                state: 'failure',
-                target_url: url,
-                description: 'Skipped due to build failure',
-                context: 'Visual Review'
-              });
-              return;
-            }
-
-            // If no changes, auto-approve
-            if (changeCount === 0) {
-              await github.rest.repos.createCommitStatus({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                sha: '${{ needs.chromatic-build.outputs.sha }}',
-                state: 'success',
-                target_url: url,
-                description: 'No visual changes detected',
-                context: 'Visual Review'
-              });
-              return;
-            }
-
-            // If changes exist, set to pending and wait for manual approval
-            await github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: '${{ needs.chromatic-build.outputs.sha }}',
-              state: 'pending',
-              target_url: url,
-              description: `${changeCount} visual change(s) need review - approve on Chromatic then comment @chromatic-approve`,
-              context: 'Visual Review'
-            });
-
-            // Add a comment with instructions
+            // Add comment with review link
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: `## 🎨 Visual Review Required\n\n**${changeCount} visual change(s)** detected.\n\n1. [Review changes on Chromatic](${url})\n2. Approve or reject the changes\n3. Comment \`@chromatic-approve\` to update the PR status`
+              issue_number: context.payload.pull_request.number,
+              body: `## 🎨 Visual Review Required\n\n**${changeCount} visual change(s)** detected.\n\n➡️ [Review and approve on Chromatic](${url})\n\nOnce approved on Chromatic, re-run this workflow or push a new commit.`
             });
 
-  # =============================================================================
-  # Job 3: Approve Visual Review
-  # Triggered by @chromatic-approve comment
-  # Updates the Visual Review status to success
-  # =============================================================================
-  approve-visual-review:
-    name: Approve Visual Review
-    if: |
-      github.event.issue.pull_request &&
-      contains(github.event.comment.body, '@chromatic-approve')
+            // Fail the job to keep it in "failed" state until approved
+            core.setFailed(`${changeCount} visual change(s) need review on Chromatic`);
 
-    runs-on: ubuntu-latest
-
-    permissions:
-      statuses: write
-      pull-requests: write
-
-    steps:
-      - name: Get PR info
-        id: pr
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { data: pr } = await github.rest.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.issue.number
-            });
-            core.setOutput('sha', pr.head.sha);
-
-      - name: Approve visual review
-        uses: actions/github-script@v7
-        with:
-          script: |
-            await github.rest.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: '${{ steps.pr.outputs.sha }}',
-              state: 'success',
-              description: 'Visual changes approved',
-              context: 'Visual Review'
-            });
-
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: '✅ Visual review approved!'
-            });
+      - name: Build errors
+        if: needs.chromatic-build.outputs.error-count != '0'
+        run: |
+          echo "Build had errors"
+          exit 1
