fix(chromatic): update Chromatic action to version 11 for improved stability

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -97,7 +97,7 @@ jobs:
 
       - name: Run Chromatic
         id: chromatic
-        uses: chromaui/action@latest
+        uses: chromaui/action@v11
         with:
           projectToken: c9bbc986d0d6
           storybookBuildDir: storybook-static
